--- a/public/patientLogin.html
+++ b/public/patientLogin.html
@@ -121,7 +121,7 @@
                     await loadAppointmentStatistics(data.patient_id); // Fetch statistics
 
                     // Redirect to the patient dashboard
-                    window.location.href = "pdb.html"; // Redirect to the patient dashboard
+                    window.location.href = "db3d.html"; // Redirect to the patient dashboard
                 } else {
                     feedback.textContent = "Login failed: " + (data.message || "Invalid credentials");
                 }
