--- a/public/viewpatientappointments.html
+++ b/public/viewpatientappointments.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Doctor Dashboard</title>
+    <title>View Patient Appointments</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> <!-- Include Chart.js -->
     <style>
@@ -22,7 +22,6 @@
             width: 100%;
             padding: 10px 0;
             text-align: center;
-            position: relative; /* Position for logo */
         }
         nav {
             margin: 10px 0;
@@ -95,32 +94,45 @@
             color: white;
         }
         tr:hover {
-            background-color: #f5f5f5;
+            background-color: #f5f5f5; /* Highlight on row hover */
+        }
+        
+        /* Chart Styles */
+        canvas {
+            max-width: 100%; /* Make charts responsive */
+            height: 150px;  /* Reduced height for charts */
+            margin-bottom: 20px;
         }
     </style>
 </head>
 <body>
     <header>
-        <img src="logo.jpg" alt="Logo" class="logo"> <!-- Logo here -->
-        <h1>Doctor Dashboard</h1>
+        <h1>View Patient Appointments</h1>
         <nav>
             <span id="doctor-name"></span>
             <a href="doctorlogout.html">Logout</a>
             <a href="doctorlanding.html">Landing Page</a>
+            <a href="ddb.html">Return to Dashboard</a> <!-- Link to return to the dashboard -->
         </nav>
     </header>
 
     <div class="container">
         <div class="sidebar">
             <h2>Quick Actions</h2>
-            <a href="viewALLPatients.html"><i class="fas fa-user-md"></i>View Patients</a>
-            <a href="setPassword.html"><i class="fas fa-calendar-check"></i> Reset Password</a>
+            <a href="viewpatients.html"><i class="fas fa-users"></i> View Patients</a>
+            <a href="viewpatientappointments.html"><i class="fas fa-calendar-check"></i> View Appointments</a>
             <a href="contact.html"><i class="fas fa-envelope"></i> Contact Support</a>
             <a href="doctorProfile.html"><i class="fas fa-user"></i> View Profile</a>
             <a href="statistics.html"><i class="fas fa-chart-bar"></i> Appointment Statistics</a>
         </div>
 
         <div class="main-content">
+            <h2>Monthly Appointment Statistics</h2>
+            <canvas id="doctorAppointmentsChart"></canvas>
+
+            <h2>Appointments Count per Patient</h2>
+            <canvas id="appointmentsPerPatientChart"></canvas> <!-- Chart for appointment counts per patient -->
+
             <h2>Your Appointments</h2>
             <table id="appointment-list">
                 <thead>
@@ -130,18 +142,13 @@
                         <th>Date</th>
                         <th>Time</th>
                         <th>Status</th>
+                        <th>Actions</th> <!-- Added actions column -->
                     </tr>
                 </thead>
                 <tbody id="appointments-data">
                     <!-- Dynamic appointment data will be populated here -->
                 </tbody>
             </table>
-
-            <h2>Monthly Appointment Statistics</h2>
-            <canvas id="doctorAppointmentsChart"></canvas>
-
-            <h2>Appointments Count per Patient</h2>
-            <canvas id="appointmentsPerPatientChart"></canvas> <!-- Chart for appointment counts per patient -->
         </div>
     </div>
 
@@ -181,6 +188,17 @@
                     row.insertCell(2).innerText = appointment.appointment_date; 
                     row.insertCell(3).innerText = appointment.appointment_time; 
                     row.insertCell(4).innerText = appointment.status; 
+
+                    // Create action buttons
+                    const actionsCell = row.insertCell(5);
+                    const cancelButton = document.createElement('button');
+                    cancelButton.innerText = 'Cancel';
+                    cancelButton.classList.add('action-button');
+                    cancelButton.addEventListener('click', () => {
+                        cancelAppointment(appointment.appointment_id); // Function to cancel the appointment
+                    });
+
+                    actionsCell.appendChild(cancelButton);
                 });
             } catch (error) {
                 console.error("Error loading appointments:", error);
@@ -215,7 +233,7 @@
 
         async function loadDoctorStatistics() {
             try {
-                const response = await fetch('http://localhost:9900/doctors/statistics', { credentials: 'include' });
+                const response = await fetch('http://localhost:9900/appointments/statistics', { credentials: 'include' });
                 if (!response.ok) throw new Error('Failed to load appointment statistics');
 
                 const stats = await response.json();
