--- a/public/ddb.html
+++ b/public/ddb.html
@@ -106,6 +106,7 @@
         <nav>
             <span id="doctor-name"></span>
             <a href="doctorlogout.html">Logout</a>
+            <a href="index.html">Home</a>
             <a href="doctorlanding.html">Landing Page</a>
         </nav>
     </header>
