--- a/public/doctorlogin.html
+++ b/public/doctorlogin.html
@@ -70,7 +70,7 @@
         </form>
         <div class="footer">
             <p>Don't have an account? <a href="doctorregister.html">Register</a></p>
-            <p><a href="forgotPassword.html">Forgot Password?</a></p>
+            <p><a href="setPassword.html">Forgot Password?</a></p> 
         </div>
     </div>
 
