--- a/public/registerDoctor.html
+++ b/public/registerDoctor.html
@@ -13,7 +13,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            height: 120vh;
         }
         .container {
             background-color: white;
@@ -34,6 +34,7 @@
         }
         input[type="text"],
         input[type="email"],
+        input[type="password"],
         input[type="tel"] {
             width: calc(100% - 10px);
             padding: 5px;
@@ -59,13 +60,19 @@
             margin-bottom: 15px;
             text-align: center;
         }
+        #doctorRegistrationForm{
+            max-width: 100%;
+            margin: 0 auto;
+            
+        }
+        
     </style>
 </head>
 <body>
     <div class="container">
         <h2>Register Doctor</h2>
         <div class="error" id="error-message"></div>
-        <form id="register-doctor-form">
+        <form id="doctorRegistrationForm">
             <label for="first_name">First Name:</label>
             <input type="text" id="first_name" name="first_name" required>
 
@@ -77,6 +84,8 @@
 
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required>
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" required>
 
             <label for="phone">Phone:</label>
             <input type="tel" id="phone" name="phone" required>
@@ -89,7 +98,7 @@
     </div>
 
     <script>
-        document.getElementById('register-doctor-form').addEventListener('submit', async function(event) {
+        document.getElementById('doctorRegistrationForm').addEventListener('submit', async function(event) {
             event.preventDefault(); // Prevent the default form submission
 
             const formData = new FormData(this);
